Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29160

Android Run Config Start Arguments not working anymore

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 11.0.0-rc1
    • Qt Creator 9.0.2
    • Android Support
    • None
    • macOS 12.6.3
      Qt 5.15.13
      QtC 9.0.2
    • Android
    • 42a62a3a5 (11.0)

      this was working well on Qt 5.15.7 / QtC 5.0.3

      Managed Devices with private and work areas usually have two users:

      • user ID 0: Main User (private)
      • user ID 10: Work User (managed)

      testing an app inside work area the app must be started with --user 10:

      see image 01

      Unfortunately now with QtC 9.0.2 this doesn't work anymore: QtC always starts the App for User 0.

      User 10 exists:

      see image 02

      Starting the app manually with adb command works

      see image 03

      Would be great to fix this. Now as workaround I build and run the app on device, kill the started User-0-App, start User-10-app using adb command and using LogRabbit to see the logs.

        1. 01_am_arguments.png
          01_am_arguments.png
          76 kB
        2. 02_users_list.png
          02_users_list.png
          95 kB
        3. 03_adb_start.png
          03_adb_start.png
          73 kB
        For Gerrit Dashboard: QTCREATORBUG-29160
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            ekkescorner Ekkehard
            Votes:
            3 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes