Android: Obtain values for AndroidRunnerWorker from settings data

The members of AndroidRunnerWorker are supposed to be initialized with
aspect values from the AndroidRunConfiguration. But they were instead
unsuccessfully obtained from the RunControl's aspects.

This obtains the values from the RunControl's settings, instead.

Fixes: QTCREATORBUG-29160
Change-Id: I124184c32d158e0648a0ee1d23dfe8707d18eab8
Reviewed-by: hjk <hjk@qt.io>